--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "coffee": "^5.2.1",
-    "cordova-browser": "^5.0.4",
+    "cordova-browser": "5.0.4",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-windows": "^6.0.1",
+    "cordova-windows": "6.0.1",
     "dropzone": "^5.5.1",
     "jquery": "^3.3.1",
     "linkify": "^0.2.1",
