--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "babel-polyfill": "^6.26.0",
     "coffee": "^5.2.1",
     "cordova-browser": "5.0.4",
+    "cordova-ios": "^5.0.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-windows": "6.0.1",
     "dropzone": "^5.5.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "linkify": "^0.2.1",
     "linkifyjs": "^2.1.8",
     "materialize-css": "^1.0.0",
